--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.0.4
+mod_version=1.1.0+1.20
 maven_group=com.megatrex4
 archives_base_name=augmented_reborn
 
