--- a/gradle.properties
+++ b/gradle.properties
@@ -9,10 +9,12 @@ yarn_mappings=1.20.1+build.10
 loader_version=0.15.11
 
 # Mod Properties
-mod_version=1.1.6+1.20
+mod_version=2.0.1+1.20
 maven_group=com.megatrex4
 archives_base_name=augmented_reborn
 
 # Dependencies
 fabric_version=0.92.2+1.20.1
 energy_version=3.0.0
+
+pal_version = 1.8.0
